--- a/composer.json
+++ b/composer.json
@@ -68,7 +68,7 @@
 		"framework/yiic"
 	],
 	"require": {
-		"php": ">=7.0.0"
+		"php": "^7.1||^7.2||^7.3"
 	},
 	"suggest": {
 		"ext-mcrypt": "Required by encrypt and decrypt methods of CSecurityManager"
