--- a/phpstan-tests.neon
+++ b/phpstan-tests.neon
@@ -1,6 +1,6 @@
 includes:
   - phpstan-base.neon
-  - vendor/phpstan/phpstan/conf/config.level1.neon
+  - phar://phpstan.phar/conf/config.level1.neon
 parameters:
   paths:
     - tests/
